WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303049
REGRESSION(
303476@main
): Broke Linux clang-18 build
https://bugs.webkit.org/show_bug.cgi?id=303049
Summary
REGRESSION(303476@main): Broke Linux clang-18 build
Philippe Normand
Reported
2025-11-24 05:48:38 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-11-24 06:02:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54413
EWS
Comment 2
2025-11-24 06:04:33 PST
Committed
303493@main
(358ca9bb3239): <
https://commits.webkit.org/303493@main
> Reviewed commits have been landed. Closing PR #54413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug