REGRESSION(303476@main): Broke Linux clang-18 build https://bugs.webkit.org/show_bug.cgi?id=303049

Unreviewed, add a missing parenthesis in closure call.

* Source/WebKit/NetworkProcess/webrtc/NetworkRTCProvider.cpp:
(WebKit::NetworkRTCProvider::rtcNetworkThread):
(): Deleted.
(WebKit::Function<void): Deleted.

Canonical link: https://commits.webkit.org/303493@main